corpus/kernel/6.17/hwmon/index.md
---
collection: kernel
version: "6.17"
title: "Hardware Monitoring"
source_url: https://www.kernel.org/doc/html/v6.17/hwmon/index.html
fetched_at: 2026-09-16T16:21:03+00:00
---
# Hardware Monitoring

- [The Linux Hardware Monitoring kernel API](hwmon-kernel-api.md)
- [PMBus core driver and internal API](pmbus-core.md)
- [How to Get Your Patch Accepted Into the Hwmon Subsystem](submitting-patches.md)
- [Naming and data format standards for sysfs files](sysfs-interface.md)
- [Userspace tools](userspace-tools.md)

## Hardware Monitoring Kernel Drivers

- [Kernel driver abituguru](abituguru.md)
- [Kernel driver abituguru3](abituguru3.md)
- [Kernel driver acbel-fsg032](acbel-fsg032.md)
- [Kernel driver power_meter](acpi_power_meter.md)
- [Kernel driver ad7314](ad7314.md)
- [Kernel driver adc128d818](adc128d818.md)
- [Kernel driver adm1025](adm1025.md)
- [Kernel driver adm1026](adm1026.md)
- [Kernel driver adm1031](adm1031.md)
- [Kernel driver adm1177](adm1177.md)
- [Kernel driver adm1266](adm1266.md)
- [Kernel driver adm1275](adm1275.md)
- [Kernel driver adm9240](adm9240.md)
- [Kernel driver adp1050](adp1050.md)
- [Kernel driver ads7828](ads7828.md)
- [Kernel driver adt7410](adt7410.md)
- [Kernel driver adt7411](adt7411.md)
- [Kernel driver adt7462](adt7462.md)
- [Kernel driver adt7470](adt7470.md)
- [Kernel driver adt7475](adt7475.md)
- [Kernel driver aht10](aht10.md)
- [Kernel driver amc6821](amc6821.md)
- [Kernel driver aquacomputer-d5next](aquacomputer_d5next.md)
- [Kernel driver asb100](asb100.md)
- [Kernel driver asc7621](asc7621.md)
- [Kernel driver aspeed-g6-pwm-tach](aspeed-g6-pwm-tach.md)
- [Kernel driver aspeed-pwm-tacho](aspeed-pwm-tacho.md)
- [Kernel driver asus_ec_sensors](asus_ec_sensors.md)
- [Kernel driver asus_rog_ryujin](asus_rog_ryujin.md)
- [Kernel driver asus_wmi_sensors](asus_wmi_sensors.md)
- [Broadcom BCM54140 Quad SGMII/QSGMII PHY](bcm54140.md)
- [Kernel driver bel-pfe](bel-pfe.md)
- [Kernel driver bpa-rs600](bpa-rs600.md)
- [Kernel driver bt1-pvt](bt1-pvt.md)
- [Kernel driver cgbc-hwmon](cgbc-hwmon.md)
- [Kernel driver ChipCap2](chipcap2.md)
- [Kernel driver coretemp](coretemp.md)
- [Kernel driver corsair-cpro](corsair-cpro.md)
- [Kernel driver corsair-psu](corsair-psu.md)
- [Kernel driver cros_ec_hwmon](cros_ec_hwmon.md)
- [Kernel driver crps](crps.md)
- [Kernel driver da9052](da9052.md)
- [Kernel driver da9055](da9055.md)
- [Kernel driver dell-smm-hwmon](dell-smm-hwmon.md)
- [Kernel driver dme1737](dme1737.md)
- [Kernel driver dps920ab](dps920ab.md)
- [Kernel driver drivetemp](drivetemp.md)
- [Kernel driver ds1621](ds1621.md)
- [Kernel driver ds620](ds620.md)
- [Kernel driver emc1403](emc1403.md)
- [Kernel driver emc2103](emc2103.md)
- [Kernel driver emc2305](emc2305.md)
- [Kernel driver emc6w201](emc6w201.md)
- [Kernel driver f71805f](f71805f.md)
- [Kernel driver f71882fg](f71882fg.md)
- [Kernel driver fam15h_power](fam15h_power.md)
- [Kernel driver fsp3y](fsp-3y.md)
- [Kernel driver ftsteutates](ftsteutates.md)
- [Kernel driver g760a](g760a.md)
- [Kernel driver g762](g762.md)
- [Kernel driver gigabyte_waterforce](gigabyte_waterforce.md)
- [Kernel driver gsc-hwmon](gsc-hwmon.md)
- [Kernel driver gl518sm](gl518sm.md)
- [Kernel driver gxp-fan-ctrl](gxp-fan-ctrl.md)
- [Kernel driver hih6130](hih6130.md)
- [Linux HP WMI Sensors Driver](hp-wmi-sensors.md)
- [Kernel driver HS3001](hs3001.md)
- [Kernel driver HTU31](htu31.md)
- [Kernel driver ibmaem](ibmaem.md)
- [Kernel driver ibm-cffps](ibm-cffps.md)
- [Kernel Driver IBMPOWERNV](ibmpowernv.md)
- [Kernel driver ina209](ina209.md)
- [Kernel driver ina2xx](ina2xx.md)
- [Kernel driver ina233](ina233.md)
- [Kernel driver ina238](ina238.md)
- [Kernel driver ina3221](ina3221.md)
- [Kernel driver inspur-ipsps1](inspur-ipsps1.md)
- [Kernel driver intel-m10-bmc-hwmon](intel-m10-bmc-hwmon.md)
- [Kernel driver ir35221](ir35221.md)
- [Kernel driver ir38064](ir38064.md)
- [Kernel driver ir36021](ir36021.md)
- [Kernel driver isl28022](isl28022.md)
- [Kernel driver isl68137](isl68137.md)
- [Kernel driver it87](it87.md)
- [Kernel driver jc42](jc42.md)
- [Kernel driver k10temp](k10temp.md)
- [Kernel driver k8temp](k8temp.md)
- [Kernel driver kbatt](kbatt.md)
- [Kernel driver kfan](kfan.md)
- [Kernel driver lan966x-hwmon](lan966x.md)
- [Kernel driver lineage-pem](lineage-pem.md)
- [Kernel driver lm25066](lm25066.md)
- [Kernel driver lm63](lm63.md)
- [Kernel driver lm70](lm70.md)
- [Kernel driver lm73](lm73.md)
- [Kernel driver lm75](lm75.md)
- [Kernel driver lm77](lm77.md)
- [Kernel driver lm78](lm78.md)
- [Kernel driver lm80](lm80.md)
- [Kernel driver lm83](lm83.md)
- [Kernel driver lm85](lm85.md)
- [Kernel driver lm87](lm87.md)
- [Kernel driver lm90](lm90.md)
- [Kernel driver lm92](lm92.md)
- [Kernel driver lm93](lm93.md)
- [Kernel driver lm95234](lm95234.md)
- [Kernel driver lm95245](lm95245.md)
- [Kernel Driver Lochnagar](lochnagar.md)
- [Kernel driver lt3074](lt3074.md)
- [Kernel driver lt7182s](lt7182s.md)
- [Kernel driver ltc2992](ltc2992.md)
- [Kernel driver ltc2945](ltc2945.md)
- [Kernel drivers ltc2947-i2c and ltc2947-spi](ltc2947.md)
- [Kernel driver ltc2978](ltc2978.md)
- [Kernel driver ltc2990](ltc2990.md)
- [Kernel driver ltc2991](ltc2991.md)
- [Kernel driver ltc3815](ltc3815.md)
- [Kernel driver ltc4151](ltc4151.md)
- [Kernel driver ltc4215](ltc4215.md)
- [Kernel driver ltc4245](ltc4245.md)
- [Kernel driver ltc4260](ltc4260.md)
- [Kernel driver ltc4261](ltc4261.md)
- [Kernel drivers ltc4282](ltc4282.md)
- [Kernel driver ltc4286](ltc4286.md)
- [Kernel driver max127](max127.md)
- [Kernel driver max15301](max15301.md)
- [Kernel driver max16064](max16064.md)
- [Kernel driver max16065](max16065.md)
- [Kernel driver max1619](max1619.md)
- [Kernel driver max16601](max16601.md)
- [Kernel driver max1668](max1668.md)
- [Kernel driver max197](max197.md)
- [Kernel driver max20730](max20730.md)
- [Kernel driver max20751](max20751.md)
- [Kernel driver max31722](max31722.md)
- [Kernel driver max31790](max31730.md)
- [Kernel driver max31760](max31760.md)
- [Kernel driver max31785](max31785.md)
- [Kernel driver max31790](max31790.md)
- [Kernel driver max31827](max31827.md)
- [Kernel driver max34440](max34440.md)
- [Kernel driver max6620](max6620.md)
- [Kernel driver max6639](max6639.md)
- [Kernel driver max6650](max6650.md)
- [Kernel driver max6697](max6697.md)
- [Kernel driver max77705](max77705.md)
- [Kernel driver max8688](max8688.md)
- [Kernel driver mc13783-adc](mc13783-adc.md)
- [Kernel driver mc33xs2410_hwmon](mc33xs2410_hwmon.md)
- [Kernel driver mc34vr500](mc34vr500.md)
- [Kernel driver MCP3021](mcp3021.md)
- [Kernel driver menf21bmc_hwmon](menf21bmc.md)
- [Kernel driver mlxreg-fan](mlxreg-fan.md)
- [Kernel driver mp2856](mp2856.md)
- [Kernel driver mp2888](mp2888.md)
- [Kernel driver mp2891](mp2891.md)
- [Kernel driver mp2975](mp2975.md)
- [Kernel driver mp2993](mp2993.md)
- [Kernel driver mp5023](mp5023.md)
- [Kernel driver mp5920](mp5920.md)
- [Kernel driver mp5990](mp5990.md)
- [Kernel driver mp9941](mp9941.md)
- [Kernel driver mpq8785](mpq8785.md)
- [Kernel driver nct6683](nct6683.md)
- [Kernel driver NCT6775](nct6775.md)
- [Kernel driver nct7363](nct7363.md)
- [Kernel driver nct7802](nct7802.md)
- [Kernel driver nct7904](nct7904.md)
- [Kernel driver npcm750-pwm-fan](npcm750-pwm-fan.md)
- [Kernel driver nsa320_hwmon](nsa320.md)
- [Kernel driver ntc_thermistor](ntc_thermistor.md)
- [Kernel driver nzxt-kraken2](nzxt-kraken2.md)
- [Kernel driver nzxt-kraken3](nzxt-kraken3.md)
- [Kernel driver nzxt-smart2](nzxt-smart2.md)
- [Kernel driver occ-hwmon](occ.md)
- [Kernel driver pc87360](pc87360.md)
- [Kernel driver pc87427](pc87427.md)
- [Kernel driver pcf8591](pcf8591.md)
- [Kernel driver pim4328](pim4328.md)
- [Kernel driver pli1209bc](pli1209bc.md)
- [Kernel driver pm6764tr](pm6764tr.md)
- [Kernel driver peci-cputemp](peci-cputemp.md)
- [Kernel driver peci-dimmtemp](peci-dimmtemp.md)
- [Kernel driver pmbus](pmbus.md)
- [Kernel driver POWERZ](powerz.md)
- [Kernel driver powr1220](powr1220.md)
- [Kernel driver pt5161l](pt5161l.md)
- [Kernel driver pxe1610](pxe1610.md)
- [Kernel driver pwm-fan](pwm-fan.md)
- [Kernel driver q54sj108a2](q54sj108a2.md)
- [Kernel driver qnap-mcu-hwmon](qnap-mcu-hwmon.md)
- [Kernel driver raspberrypi-hwmon](raspberrypi-hwmon.md)
- [Kernel driver sbrmi](sbrmi.md)
- [Kernel driver sbtsi_temp](sbtsi_temp.md)
- [Kernel driver sch5627](sch5627.md)
- [Kernel driver sch5636](sch5636.md)
- [Kernel driver scpi-hwmon](scpi-hwmon.md)
- [Kernel driver sfctemp](sfctemp.md)
- [Kernel driver sg2042-mcu](sg2042-mcu.md)
- [Kernel driver sht15](sht15.md)
- [Kernel driver sht21](sht21.md)
- [Kernel driver sht3x](sht3x.md)
- [Kernel driver sht4x](sht4x.md)
- [Kernel driver shtc1](shtc1.md)
- [Kernel driver sis5595](sis5595.md)
- [Kernel driver sl28cpld](sl28cpld.md)
- [Kernel driver Ampere(R)’s Altra(R) SMpro hwmon](smpro-hwmon.md)
- [Kernel driver smsc47b397](smsc47b397.md)
- [Kernel driver smsc47m192](smsc47m192.md)
- [Kernel driver smsc47m1](smsc47m1.md)
- [Microchip SparX-5 SoC](sparx5-temp.md)
- [Kernel driver spd5118](spd5118.md)
- [Kernel driver stpddc60](stpddc60.md)
- [Kernel driver surface_fan](surface_fan.md)
- [Kernel driver sy7636a-hwmon](sy7636a-hwmon.md)
- [Kernel driver tc654](tc654.md)
- [Kernel driver tc74](tc74.md)
- [Kernel driver thmc50](thmc50.md)
- [Kernel driver tmp102](tmp102.md)
- [Kernel driver tmp103](tmp103.md)
- [Kernel driver tmp108](tmp108.md)
- [Kernel driver tmp401](tmp401.md)
- [Kernel driver tmp421](tmp421.md)
- [Kernel driver tmp464](tmp464.md)
- [Kernel driver tmp513](tmp513.md)
- [Kernel driver tps23861](tps23861.md)
- [Kernel driver tps25990](tps25990.md)
- [Kernel driver tps40422](tps40422.md)
- [Kernel driver tps53679](tps53679.md)
- [Kernel driver tps546d24](tps546d24.md)
- [Kernel driver twl4030-madc](twl4030-madc-hwmon.md)
- [Kernel driver ucd9000](ucd9000.md)
- [Kernel driver ucd9200](ucd9200.md)
- [Kernel driver vexpress](vexpress.md)
- [Kernel driver via686a](via686a.md)
- [Kernel driver vt1211](vt1211.md)
- [Kernel driver w83627ehf](w83627ehf.md)
- [Kernel driver w83627hf](w83627hf.md)
- [Kernel driver w83773g](w83773g.md)
- [Kernel driver w83781d](w83781d.md)
- [Kernel driver w83791d](w83791d.md)
- [Kernel driver w83792d](w83792d.md)
- [Kernel driver w83793](w83793.md)
- [Kernel driver w83795](w83795.md)
- [Kernel driver w83l785ts](w83l785ts.md)
- [Kernel driver w83l786ng](w83l786ng.md)
- [Kernel driver wm831x-hwmon](wm831x.md)
- [Kernel driver wm8350-hwmon](wm8350.md)
- [Kernel driver xgene-hwmon](xgene-hwmon.md)
- [Kernel driver xdp710](xdp710.md)
- [Kernel driver xdpe122](xdpe12284.md)
- [Kernel driver xdpe152](xdpe152c4.md)
- [Kernel driver zl6100](zl6100.md)
